# DiRect

./: CMakeLists.txt  README.md
include/: direct_method.h
samples/: CMakeLists.txt  sample_rasrigin.cpp  sample_rastrigin.cpp  tstcpp.cpp
src/: CMakeLists.txt  direct_method.cpp
